switch to PostgreSQL + Ollama; update docs; clean up virtual threads config